# avmpi_scripts

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
avmpi_scripts/: add_equip_aal.py  embed_md.py  embed_md.sh  embed_mdata.py  excel.py  excel2airtable.py  export_md.py  field_mappings.json  files.py  make_log.py  start_tmux  start_tmux.sh  test_object_creation_from_excel.py  util.py  validate_media.py  validate_media_config.json
avmpi_scripts/airtable/: airtable.py  airtable_config.json  field_mappings.json
avmpi_scripts/services/airtable/: airtable.py  airtable_config.json  verify_linked_values.py
avmpi_scripts/services/excel/: excel.py  excel_config.json
avmpi_scripts/services/mediaconch/: AVMPI Policy - FFV1 MKV Video Master.xml  BAVC NTSC DV Master (4_3).xml
tests/: AVMPI_Audio_BWF-EmbedMD_Guide_20240404.xlsx  AVMPI_Audio_BWF-EmbedMD_Guide_Vendor.xlsx  Unit-AssetsMetadata-template20240209_missing-req-fields.xlsx  Unit-AssetsMetadata-template20240209_tests.xlsx  Vendor-AssetsMetadata-template20240307_missing-req-fields.xlsx  Vendor-AssetsMetadata-template20240307_tests.xlsx  test_airtable.py  test_excel.py
