[bdist-wheel]
universal=1

[metadata]
name = avmpi_scripts
description = Python Client for Smithsonian Libary and Archives Audiovisual Media Preservation Initiative
long_description = file: README.md
long_description_content_Type = text/markdown
author = Brendan Coates
url = https://www.github.com/brnco/avmpi_scripts
authoremail = brendan.emerson.coates@gmail.com

[options]
packages = avmpi_scripts

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[flake8]
max-line-length = 160
extend-ignore = E128, E127, E265, F841, E501
